# caffe_latte

./: .gitignore  CMakeLists.txt  Makefile  Makefile.config.example  rcnn_proposal_layer.cpp  rcnn_proposal_layer.cu
apps/: CMakeLists.txt
apps/ctpn/: CMakeLists.txt  cfg.hpp  graph.hpp  main.cpp  ployfit.hpp
apps/idcard/: CMakeLists.txt  cfg.hpp  classification.cpp  classification.hpp  graph.hpp  main.cpp  polyfit.cpp  polyfit.h  test.cpp  text_builder.hpp  text_detection.cpp  text_detection.hpp  text_ocr.cpp  text_ocr.hpp
apps/mtcnn/: CMakeLists.txt
apps/mtcnn/alignment/include/lbf/: common.hpp
apps/mtcnn/alignment/src/: main.cpp  prepare.cpp  train.cpp
apps/mtcnn/alignment/src/lbf/: common.cpp  lbf.cpp
apps/mtcnn/detect/: mtcnn.cc  mtcnn.h  mtcnn_detect_align.cc  mtcnn_detect_align.h
apps/mtcnn/model/: det3.prototxt
apps/mtcnn/test/: MTMain.cpp  det_align_main.cc  detect_alignment.cpp
apps/mtcnn_frcnn/: CMakeLists.txt
apps/mtcnn_frcnn/alignment/: lib3000fps.cmake
apps/mtcnn_frcnn/alignment/src/: test.cpp
apps/mtcnn_frcnn/alignment/src/lbf/: rf.cpp
apps/mtcnn_frcnn/detect/: faster_rcnn.cpp  faster_rcnn.h  frcnn.cpp  frcnn.h  mtcnn.cpp  mtcnn.h  mtcnn_detect_align.cpp  mtcnn_detect_align.h
apps/mtcnn_frcnn/model/: det1.prototxt  vgg16_faster_rcnn_face.prototxt
apps/mtcnn_frcnn/test/: det_align_main.cpp  frcnn_align.cpp
apps/ocr/: CMakeLists.txt  classification.cpp  (+1 more)
apps/rcnn/: CMakeLists.txt  faster_rcnn.cc  faster_rcnn.cpp  frcnn.cpp  frcnn.h  frcnn_main.cpp
cmake/: Cuda.cmake  Dependencies.cmake  HunterGate.cmake  Summary.cmake  Targets.cmake  caffe_options.cmake  msvc.cmake
docs/: install_apt_debian.md  installation.md
examples/: CMakeLists.txt
pycaffe/: CMakeLists.txt  py_blob.hpp  py_layer.h  py_layer.hpp  pycaffe.cpp  pycaffe.cpp_bak  pycaffe2.cpp  pycaffe_wrapper.py
python/: CMakeLists.txt
python/caffe/: _caffe.cpp  _caffe.cpp_bak  pycaffe.cpp
src/: CMakeLists.txt  caffe.cpp
src/caffe/: CMakeLists.txt  blob.cpp  blob.hpp  c_api.cpp  common.cpp  common.hpp  data_transformer.cpp  flags.cpp  internal_thread.cpp  layer.hpp  layer_factory.cpp  layer_factory.hpp  net.cpp  net_config.cpp  parallel.hpp  solver.cpp  syncedmem.cpp
src/caffe/fast_rcnn/: deformable_psroi_pooling_layer.cpp  frcnn_anchor_target_layer.cc  frcnn_anchor_target_layer.cpp  frcnn_proposal_layer.cc  frcnn_proposal_target_layer.cc  frcnn_roi_data_layer.cc  frcnn_roi_data_layer.cpp  mask_pooling_layer.cpp  psroi_align_layer.cpp  psroi_align_layer.cu  psroi_pooling_layer.cpp  roi_padding_layer.cpp  roi_warping_layer.cpp  smooth_L1_loss_layer.cpp
src/caffe/layers/: absval_layer.cpp  accuracy_layer.cpp  anchor_target_layer.cpp  axpy_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  base_data_layer.cu  batch_norm_layer.cpp  batch_reindex_layer.cpp  bias_layer.cpp  bn_layer.hpp  bnll_layer.cpp  box_annotator_ohem_layer.cpp  box_annotator_ohem_layer.hpp  concat_layer.cpp  concat_layer.hpp  contrastive_loss_layer.cpp  conv_dw_layer.cpp  conv_dw_layer.cu  conv_dw_layer.hpp  conv_layer.cpp  conv_layer.hpp  crop_layer.cpp  deconv_layer.cpp  deformable_conv_layer.cpp  deformable_psroi_pooling_layer.cpp  dense_block_layer.cpp  dense_block_layer.cu  densecrf_layer.cpp  dropout_layer.cpp  eltwise_layer.cpp  elu_layer.cpp  embed_layer.cpp  euclidean_loss_layer.cpp  exp_layer.cpp  filter_layer.cpp  focal_loss_layer.cpp  focal_loss_layer.cu  focal_loss_layer.hpp  frcnn_proposal_layer.cpp  (+95 more)
src/caffe/layers/amsoftmax/: label_specific_add_layer.cpp
src/caffe/layers/core/: argmax_layer.cpp  attention_crop_layer.cpp  attention_crop_layer.cu  axpy_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  bilinear_layer.cpp  bn_layer.cpp  bn_layer.cu  compact_bilinear_layer.cpp  compact_bilinear_layer.cu  conv_lstm_layer.cpp  conv_lstm_unit_layer.cpp  conv_lstm_unit_layer.cu  crop_layer.cu  ctc_decoder_layer.cpp  data_layer.cpp  deconv_layer.cpp  dummy_data_layer.cpp  elu_layer.cpp  exp_layer.cpp  flatten_layer.cpp  focal_loss_layer.cpp  gaussian_attention_layer.cpp  gaussian_attention_layer.cu  hdf5_data_layer.cpp  hdf5_output_layer.cpp  hinge_loss_layer.cpp  im2col_layer.cpp  image_data_layer.cpp  infogain_loss_layer.cpp  kldiv_loss_layer.cpp  l2_normalize_layer.cpp  l2_normalize_layer.cu  loc_loss_layer.cpp  loc_loss_layer.cu  log_layer.cpp  lrn_layer.cpp  lstm_junhyuk_layer.cu  lstm_new_layer.cpp  (+36 more)
src/caffe/layers/data/: base_data_layer.cpp  data_layer.cpp  image_data_layer.cpp  memory_data_layer.cpp  mtcnn_data_layer.cpp  window_data_layer.cpp
src/caffe/layers/losses/: mtcnn_euclidean_loss_layer.cpp  softmax_kld_loss_layer.cpp  softmax_loss_layer.cpp
src/caffe/layers/rcnn/: deformable_conv_layer.cpp  image_seg_data_layer.cpp  mask_pooling_layer.cu  proposal_layer.cpp  roi_align_layer.cpp  roi_pooling_layer.cu  seg_accuracy_layer.cpp
src/caffe/layers/rcnn/train/: anchor_target_layer.cpp  proposal_target_layer.cpp  roi_data_layer.cpp
src/caffe/layers/sphereface/: margin_inner_product_layer.cu
src/caffe/layers/tripletloss/: rank_hard_loss_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/solvers/: adadelta_solver.cpp  adagrad_solver.cpp  adam_solver.cpp  nesterov_solver.cpp  rmsprop_solver.cpp  sgd_solver.cpp
src/caffe/test/: test_caffe_main.cpp  test_gradient_based_solver.cpp  test_inner_product_layer.cpp  test_random_number_generator.cpp  test_syncedmem.cpp  test_util_blas.cpp
src/caffe/transforms/: transforms.cpp
src/caffe/util/: anchor.cpp  bbox_util.cpp  bbox_util.cu  benchmark.cpp  blocking_queue.cpp  db.cpp  db_lmdb.cpp  densecrf_util.cpp  detect_utils.cpp  dynamic_library.cpp  filesystem.hpp  frcnn_param.cpp  frcnn_util.cpp  frcnn_utils.cpp  internal_thread.cpp  io.cc  io.cpp  io.hpp  math_functions.cpp  math_functions_eigen.cpp  nms.cu  nms_util.cpp  nms_util.hpp  permutohedral.cpp  signal_handler.cpp  string.hpp  upgrade_proto.cpp
tools/: CMakeLists.txt  caffe.cpp  compute_image_mean.cpp  convert_imageset.cpp  extract_features.cpp  mtcnn_data_convert.cpp  upgrade_net_proto_binary.cc  upgrade_net_proto_text.cpp  upgrade_solver_proto_text.cpp
(+177 files in other folders)
